<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hossam.sambaking.activities.MainActivity">

  <android.support.v7.widget.RecyclerView
      android:id="@+id/recipes_recycler_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="@dimen/sixteen_sp"
      >

  </android.support.v7.widget.RecyclerView>

</android.support.design.widget.CoordinatorLayout>